# localleaf

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
docs/: README.md  ai_assistant.md  architecture.md  color_themes.md  commands.md  components.md  development.md  drag_and_drop.md  index.html  multi_window.md  pdf-rendering.md  shell_escape.md  store.md  tectonic_integration.md  version_control.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/ai/: AiPanel.tsx
frontend/src/components/editor/: DiffViewer.tsx  LatexEditor.tsx  citationCompletions.ts  latexCommands.ts  latexCompletions.ts  latexLinter.ts
frontend/src/components/pdf/: BrowserPdfViewer.tsx  LocalLeafPdfCanvasViewer.tsx  PdfToolbar.tsx  PdfViewer.tsx
frontend/src/components/settings/: SettingsModal.tsx
frontend/src/components/sidebar/: ContextMenu.tsx  FileItem.tsx  Sidebar.tsx  SidebarToolbar.tsx
frontend/src/components/ui/: ErrorPanel.tsx  ResizeHandle.tsx  (+2 more)
frontend/src/hooks/: useAiAssist.ts  useAutoCommit.ts  useAutoSave.ts  useBibEntries.ts  useClickOutside.ts  useCompile.ts
frontend/src/lib/: bibtex.ts  parseBib.ts  tauri.ts  theme.ts
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json  test_shell.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_service.rs  bib_service.rs  compiler.rs  error_parser.rs  fs_service.rs  git_service.rs  main.rs  window_manager.rs
(+7 files in other folders)
